[package]
name = "mozim"
version = "0.3.0"
description = "DHCP Client Library"
license = "Apache-2.0"
repository = "https://github.com/nispor/mozim"
edition = "2021"

[lib]
name = "mozim"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8.5", default-features = false }
libc = "0.2.132"
dhcproto = "0.12.0"
log = "0.4.17"
etherparse = "0.13.0"
nix = { version = "0.30", features = ["poll", "time", "event"] }
rtnetlink = { version = "0.18.0", optional = true }
futures = { version = "0.3", default-features = false, features = ["std"] }
ipnet = "2.11.0"
tokio = { version = "1.19", features = ["macros", "rt", "net"] }

[features]
default = ["netlink"]
netlink = ["dep:rtnetlink"]

[dev-dependencies]
env_logger = "0.11.0"
